--- a/package.json
+++ b/package.json
@@ -4,15 +4,30 @@
 	"description": "app for movies",
 	"main": "index.js",
 	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/react-hooks": "^8.0.1",
+		"@testing-library/user-event": "^14.2.1",
+		"css-loader": "^6.7.1",
+		"jest": "^28.1.2",
+		"jest-environment-jsdom": "^28.1.2",
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-device-detect": "^2.2.2",
+		"react-dom": "^18.1.0",
+		"style-loader": "^3.3.1",
+		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.2",
 		"@babel/preset-env": "^7.18.2",
 		"@babel/preset-react": "^7.17.12",
 		"babel-loader": "^8.2.5",
+		"babel-plugin-styled-components": "^2.0.7",
+		"copy-webpack-plugin": "^11.0.0",
+		"dotenv-webpack": "^7.1.0",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest-fetch-mock": "^3.0.3",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.9.2"
@@ -20,7 +35,7 @@
 	"scripts": {
 		"dev": "webpack serve",
 		"build": "webpack",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
