--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "^18.1.0",
 		"react-device-detect": "^2.2.2",
 		"react-dom": "^18.1.0",
+		"react-router-dom": "^6.3.0",
 		"style-loader": "^3.3.1",
 		"styled-components": "^5.3.5"
 	},
